<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.usescases.shopsList.detail.ShopDetailActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:layout_gravity="start"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_back_icon" />

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/shops_detail_text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="4pt"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <ImageView
                    android:id="@+id/imgv_shopImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8pt"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|bottom"
                    android:text="@string/detail_location_text"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_got_to_map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end|bottom"
                    android:textStyle="bold"
                    android:textColor="@color/text_go_to_color"
                    android:text="@string/detail_go_to_map_text"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.mapbox.maps.MapView
                        android:id="@+id/mapView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:mapbox_cameraTargetLat="39.5"
                        app:mapbox_cameraTargetLng="-98.0"
                        app:mapbox_cameraZoom="2.0"
                        app:mapbox_cameraPitch="0.0"
                        app:mapbox_cameraBearing="0.0" />

                </FrameLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:padding="4pt">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_margin="4pt"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:padding="4pt"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/shop_detail_tv_country"
                            />

                        <TextView
                            android:id="@+id/tv_street"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/shop_detail_tv_street"
                            />

                        <TextView
                            android:id="@+id/tv_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/shop_detail_tv_city"
                            />

                        <TextView
                            android:id="@+id/tv_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/shop_detail_tv_state"
                            />

                        <TextView
                            android:id="@+id/tv_zip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/shop_detail_tv_zip"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_marginStart="4pt"
                android:layout_marginEnd="4pt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="2pt"
                    android:layout_marginBottom="2pt"
                    android:text="@string/detail_about_text"
                    />

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="10dp"
                    android:layout_margin="2pt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:padding="4pt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_about_shop"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="12sp"
                            android:maxLines="3"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>