<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.usescases.shopsList.detail.ShopDetailActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/shopsList_text"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_shopListScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_shops_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:duration="800">

                <!-- Adding 8 rows of placeholders -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/list_placeholder_cards_layout" />
                    <include layout="@layout/list_placeholder_cards_layout" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_shops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="4pt"
                app:cardBackgroundColor="@color/colorCardOnTap"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8pt"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_ShopLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorCardTextOnTap"/>

                    <TextView
                        android:id="@+id/tv_shopText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shops_text"
                        android:textColor="@color/colorCardTextOnTap"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_nearShops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="4pt"
                app:cardBackgroundColor="@color/white"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8pt"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_ShopLengthNear"
                        android:text="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorCardTitleNoTap"/>

                    <TextView
                        android:id="@+id/tv_shopNearText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorCardTextNoTap"
                        android:text="@string/lees_than_1_km"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8pt"/>

        <LinearLayout
            android:id="@+id/ll_categoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_category_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:duration="800">

                <!-- Adding 8 rows of placeholders -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/list_placeholder_category_layout" />
                    <include layout="@layout/list_placeholder_category_layout" />
                    <include layout="@layout/list_placeholder_category_layout" />
                    <include layout="@layout/list_placeholder_category_layout" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_category" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_shopList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="gone"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:duration="800">

                <!-- Adding 8 rows of placeholders -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/list_placeholder_layout" />
                    <include layout="@layout/list_placeholder_layout" />
                    <include layout="@layout/list_placeholder_layout" />
                    <include layout="@layout/list_placeholder_layout" />
                    <include layout="@layout/list_placeholder_layout" />
                    <include layout="@layout/list_placeholder_layout" />
                    <include layout="@layout/list_placeholder_layout" />
                    <include layout="@layout/list_placeholder_layout" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewShops"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8pt"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_emptyList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:visibility="gone"
            android:text="@string/no_near_shops"
            >

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_noPermissionsGranted"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permisionAskText"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>